# sketchup-mcp

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sketchup.json  su_mcp.rb  update_and_restart.sh
.github/workflows/: ci.yml
examples/: README.md
skills/sketchup-usage/: SKILL.md
src/sketchup_mcp/: __init__.py  server.py
su_mcp/: extension.json
su_mcp/su_mcp/: main.rb
tests/: conftest.py  test_server.py
