[project]
name = "neonexai-sketchup-mcp"
version = "1.0.0"
description = "SketchUp integration through the Model Context Protocol — NeoNexAI hardened fork (no arbitrary code execution)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NeoNexAI Agency", email = "info@neonexai.com"}
]
keywords = ["sketchup", "mcp", "model-context-protocol", "cad", "3d", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.urls]
Homepage = "https://github.com/NeoNexAI/sketchup-mcp"
Issues = "https://github.com/NeoNexAI/sketchup-mcp/issues"

[project.scripts]
sketchup-mcp = "sketchup_mcp.server:main"
neonexai-sketchup-mcp = "sketchup_mcp.server:main"

[project.entry-points.mcp]
sketchup = "sketchup_mcp.server:mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"} 